[package]
name = "metaballs"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
softbuffer = ">=0.2.0"
winit = ">=0.27.5"
# colored = "2"
pixel_lib = { path = "./pixel_lib" }
line_renderer = { path = "./line_renderer" }

[workspace]
members = [
    "./pixel_lib",
    "./line_renderer",
]